# CLinAlg

./: .gitignore  LICENSE.txt  MakeFile  README.md  clinalg.yml  distutils.cfg  requirements.txt  setup.cfg  setup.py
src/CLinAlg/: AlgLine.pxd  AlgLine.pyx  AlgMatrix.pxd  AlgMatrix.pyx  AlgPlane.pxd  AlgPlane.pyx  AlgQuaternion.pxd  AlgQuaternion.pyx  AlgSegment.pxd  AlgSegment.pyx  AlgSurface.pxd  AlgSurface.pyx  AlgTool.pxd  AlgTool.pyx  AlgTransformation.c  AlgTransformation.pxd  AlgTransformation.pyx  AlgVector.pxd  AlgVector.pyx  AlgVector2D.pxd  AlgVector2D.pyx  AlgWire.pxd  AlgWire.pyx  ToolFiber.pxd  ToolFiber.pyx  ToolMath.pxd  ToolMath.pyx  __init__.pxd  __init__.py  delauney.pxd  delauney.pyx
