[metadata]
name = CLinAlg
version = 0.0
description = Library to manage Linear algebra
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Miguel Tejada
author_email = tejada.miguel@gmail.com
url = https://www.agripasoft.com
download_urls = https://www.agripasoft.com
project_urls =
	Documentation = https://www.agripasoft.com
	Code = https://www.agripasoft.com
	Issue tracker = https://www.agripasoft.com
classifiers =
	Development Status :: 1 - Planning
	License :: OSI Approved :: MIT License
	Intended Audience :: Engineering
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Mathematics
	Natural Language :: Spanish
	Operating System :: Windows
	Programming Language :: C
	Programming Language :: Cython
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: Implementation :: CPython

[options]
zip_safe = False
python_requires = >=3.10
package_dir = =src
packages = find:

[options.packages.find]
where = src

[options.package_data]
* = *.pxd, *.h
CLinAlg = src/*